package baumaschine;

public class Baumaschinen {

    public int motorleistung;

    public Baumaschinen(int motorleistung) {
        this.motorleistung = motorleistung;
    }
}
