package transportgeraete;

public class Fourderbaender extends Transportgeraete {

    public int breiteFourderbaender;

    public Fourderbaender(int motorleistung, int breiteFourderbaender) {
        super(motorleistung);
        this.breiteFourderbaender = breiteFourderbaender;
    }




}