package transportgeraete;

import baumaschine.Baumaschinen;

public class Transportgeraete extends Baumaschinen {
    public Transportgeraete(int motorleistung) {
        super(motorleistung);
    }
}
