@startuml

title __VERERBUNGBAUMASCHINE's Class Diagram__\n

  namespace Main {
    class Main.Main {
    }
  }
  

  namespace bagger {
    class bagger.Bagger {
    }
  }
  

  namespace bagger {
    class bagger.Schaufelradbagger {
    }
  }
  

  namespace bagger {
    class bagger.Seilbagger {
    }
  }
  

  namespace baumaschine {
    class baumaschine.Baumaschinen {
    }
  }
  

  namespace transportgeraete {
    class transportgeraete.Fourderbaender {
    }
  }
  

  namespace transportgeraete {
    class transportgeraete.Kipplaster {
    }
  }
  

  namespace transportgeraete {
    class transportgeraete.Transportgeraete {
    }
  }
  

  bagger.Bagger -up-|> baumaschine.Baumaschinen
  bagger.Schaufelradbagger -up-|> bagger.Bagger
  bagger.Seilbagger -up-|> bagger.Bagger
  transportgeraete.Fourderbaender -up-|> transportgeraete.Transportgeraete
  transportgeraete.Kipplaster -up-|> transportgeraete.Transportgeraete
  transportgeraete.Transportgeraete -up-|> baumaschine.Baumaschinen


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
